# resonance-labs

./: .env.example  .gcloudignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  cloudbuild.phase4.yaml  cloudbuild.yaml  docker-compose.yml  implementation_plan.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-ml.txt  requirements.txt  ruff.toml
.githooks/: commit-msg  pre-commit
apps/web/: Dockerfile  package.json
apps/web/src/: app.css  app.html
data/: README.md
data/manifests/: phase4_manifest.example.json
data/real_room_fixtures/: README.md  manifest.example.json
docs/: browser_audio.md  calibration.md  chirp_probe.md  device_validation.md  explainability.md  gcp_cloud_run.md  glass_recording_protocol.md  limitations.md  measurement_protocol.md  phase4_baseline.md  phase4_private_gcp_workflow.md  privacy_history_cleanup.md  real_recording_fixtures.md  room_acoustic_fingerprint.md
docs/schemas/: phase4_dataset_manifest.schema.json
experiments/results/: README.md
models/baseline_sklearn/: model-card.md
notebooks/: phase4_sklearn_baseline.ipynb
scripts/: build_phase4_manifest.py  check_project_docs.py  check_supply_chain.py  extract_phase4_features.py  generate_phase2_fixtures.py  run_api.py  run_api_tests.py  run_phase4_benchmark.py  train_baseline.py  validate_real_room_fixtures.py
services/api/: Dockerfile
services/api/app/: main.py  (+2 more)
skills/cloud-security-architect/: SKILL.md
skills/math-physics-pipeline/: SKILL.md
skills/python-svelte-dev/: SKILL.md
(+40 files in other folders)
